# pycon-cz-2019-workshop

./: pyproject.toml
notebooks/: 01_numpy.ipynb  02_pandas-introduction.ipynb  03_pandas-io.ipynb  04_pandas-data_manipulation.ipynb  05_merging_grouping_aggregation.ipynb  table-of-contents.ipynb
