[tool.poetry]
name = "np"
version = "0.1.0"
description = ""
authors = ["ZhukovGreen <zhukovgreen@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.24.2"
matplotlib = "^3.1"
seaborn = "^0.9.0"
jupyter = "^1.0"
sqlalchemy = "^1.3"
html5lib = "^1.0"
beautifulsoup4 = "^4.7"
xlrd = "^1.2"
plotly = "^3.10"
plotly_express = "^0.3.0"
jupyterlab = "^0.35.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 54
target-version = ['py37']
